--- a/Union_Find/04.Redundant_Connection.md
+++ b/Union_Find/04.Redundant_Connection.md
@@ -22,7 +22,7 @@ Constraints:
 
 The question asks to remove the last input that can form a cycle in the graph. We can use DFS to explore if there is a cycle by adding a new edge. This would explore the graph every time.
 Here the UnionFind can rescue. We can set union all the connected edge by its connected head and tail nodes. When a new edge is added, if the two nodes are in different union find set. They are not connected. If yes, that is the last input to form the cycle, and we should return it. In this way, we avoid exploring the connected nodes by dfs every time. 
-We can set the size of unionFind to be the length of edges array because of 1 <= a<sub>i</sub> < b<sub>i</sub> <= edges.length.
+We can set the size of unionFind to be the length of edges array + 1 because of 1 <= a<sub>i</sub> < b<sub>i</sub> <= edges.length.
 ```java
     public int[] findRedundantConnection(int[][] edges) {
         UnionFind uf = new UnionFind(edges.length + 1);
