--- a/DP/08.Maximal_Square.md
+++ b/DP/08.Maximal_Square.md
@@ -91,3 +91,166 @@ Time complexity: O(NM)
 
 Space complexity: O(M)
 
+
+### Count Square Submatrices with All Ones
+
+[Link] (https://leetcode.com/problems/count-square-submatrices-with-all-ones/)
+
+Given a m * n matrix of ones and zeros, return how many square submatrices have all ones.
+
+### Solution
+
+Let's consider how many submatrices with all ones there are when we fixed the bottom right corner. It is the length of side of maximal square. If that is found, it would be easy to find out this is acutally the same as maximal square. And it asks the sum of the length of side of all squares. If you resolve the issue with the following relation.
+```
+dp[i][j] = Min(dp[i-1][j-1],dp[i-1][j],dp[i][j-1]) + 1 for matrix[i][j] = 1
+```
+It simply the sum of dp[i][j].
+
+```java
+    public int countSquares(int[][] matrix) {
+        final int M = matrix.length;
+        final int N = matrix[0].length;
+        int[][] dp = new int[M+1][N+1];
+        
+        int res = 0;
+        for (int i = 0; i < M; ++i) {
+            for (int j = 0; j < N; ++j) {
+                if (matrix[i][j] == 0) {
+                    continue;
+                }
+                dp[i+1][j+1] = Math.min(Math.min(dp[i][j+1],dp[i+1][j]), dp[i][j]) + 1;
+                res += dp[i+1][j+1];
+            }
+        }
+        return res;
+    }
+```
+Time complexity: O(NM)
+
+Space complexity: O(NM)
+
+Or one dimension array.
+
+```java
+    public int countSquares(int[][] matrix) {
+        final int M = matrix.length;
+        final int N = matrix[0].length;
+        int[] dp = new int[N+1];
+        int res = 0;
+        int pre = 0;
+        for (int i = 0; i < M; ++i) {
+            pre = 0;
+            for (int j = 0; j < N; ++j) {
+                int temp = dp[j+1];
+                if (matrix[i][j] == 0) {
+                    dp[j+1] = 0;
+                } else {
+                    dp[j+1] = Math.min(pre, Math.min(dp[j+1], dp[j])) + 1;
+                    res += dp[j+1];
+                }
+                pre = temp;
+            }
+        }
+        return res;
+    }
+```
+### Count Fertile Pyramids in a Land
+
+[Link](https://leetcode.com/problems/count-fertile-pyramids-in-a-land/)
+
+A farmer has a rectangular grid of land with m rows and n columns that can be divided into unit cells. Each cell is either fertile (represented by a 1) or barren (represented by a 0). All cells outside the grid are considered barren.
+
+A pyramidal plot of land can be defined as a set of cells with the following criteria:
+
+The number of cells in the set has to be greater than 1 and all cells must be fertile.
+The apex of a pyramid is the topmost cell of the pyramid. The height of a pyramid is the number of rows it covers. Let (r, c) be the apex of the pyramid, and its height be h. Then, the plot comprises of cells (i, j) where r <= i <= r + h - 1 and c - (i - r) <= j <= c + (i - r).
+An inverse pyramidal plot of land can be defined as a set of cells with similar criteria:
+
+The number of cells in the set has to be greater than 1 and all cells must be fertile.
+The apex of an inverse pyramid is the bottommost cell of the inverse pyramid. The height of an inverse pyramid is the number of rows it covers. Let (r, c) be the apex of the pyramid, and its height be h. Then, the plot comprises of cells (i, j) where r - h + 1 <= i <= r and c - (r - i) <= j <= c + (r - i).
+Some examples of valid and invalid pyramidal (and inverse pyramidal) plots are shown below. Black cells indicate fertile cells.
+
+
+Given a 0-indexed m x n binary matrix grid representing the farmland, return the total number of pyramidal and inverse pyramidal plots that can be found in grid.
+
+#### Solution
+
+If cell (i,j) is the apex of pyramid with height x. How many sub pyramids with it as apex? It is x.
+
+If cell (i, j) is the apex of a pyramid with height x (the base is under (i,j)), what would be the cell (i+1, j-1), cell (i+1, j) and cell(i+1,j+1) ? They must be at least the apex of pyramids with height x - 1. If any of them is the apex of a small pyramid, it (i,j) would not form a pyramid with height x. And if they are (i,j) must be a pryamid with height x. So when we talk about the maximum height of primay, it is both necessary and sufficient.
+
+The logic is the same as maximal square. But we do need to exam both directions up and down as required by the question.
+
+``` java
+    public int countPyramids(int[][] grid) {
+        final int M = grid.length;
+        final int N = grid[0].length;
+        int[][] dp = new int[M+2][N+2];
+        int res = 0;
+        
+        for (int i = 0; i < M; ++i) {
+            for (int j = 0; j < N; ++j) {
+                if (grid[i][j] == 0) {
+                    continue;
+                }
+                dp[i+1][j+1] = Math.min(dp[i][j], Math.min(dp[i][j+1], dp[i][j+2])) + 1;
+                res += dp[i+1][j+1] - 1;
+            }
+        }
+        
+        for (int i = M - 1; i >= 0; --i) {
+            for (int j = 0; j < N; ++j) {
+                if (grid[i][j] == 0) {
+                    dp[i+1][j+1] = 0;
+                } else {
+                    dp[i+1][j+1] = Math.min(dp[i+2][j], Math.min(dp[i+2][j+1], dp[i+2][j+2])) + 1;
+                    res += dp[i+1][j+1]-1;
+                }
+            }
+        }
+        return res;
+    }
+```
+Time complexity: O(MN)
+Space complexity: O(MN)
+
+Or use one dimension array
+```java
+    public int countPyramids(int[][] grid) {
+        final int M = grid.length;
+        final int N = grid[0].length;
+        int[] dp = new int[N+2];
+        int prev = 0;
+        int res = 0;
+        
+        for (int i = 0; i < M; ++i) {
+            prev = 0;
+            for (int j = 0; j < N; ++j) {
+                int temp = dp[j+1];
+                if (grid[i][j] == 0) {
+                    dp[j+1] = 0;
+                } else {
+                    dp[j+1] = Math.min(prev, Math.min(dp[j+1], dp[j+2])) + 1;
+                    res += dp[j+1] - 1;
+                }
+                prev = temp;
+                
+            }
+        }
+        Arrays.fill(dp, 0);
+        for (int i = M - 1; i >= 0; --i) {
+            prev = 0;
+            for (int j = 0; j < N; ++j) {
+                int temp = dp[j + 1];
+                if (grid[i][j] == 0) {
+                    dp[j+1] = 0;
+                } else {
+                    dp[j+1] = Math.min(prev, Math.min(dp[j+1], dp[j+2])) + 1;
+                    res += dp[j+1]-1;
+                }
+                prev = temp;
+            }
+        }
+        return res;
+    }
+```
