--- a/DP/19.Maximal_Rectangle.md
+++ b/DP/19.Maximal_Rectangle.md
@@ -2,135 +2,55 @@
 
 [Link](https://leetcode.com/problems/maximal-rectangle/)
 
-A string containing digits only may be mapped from Letters. A -> 1, B -> 2, ... Z ->26.  A letter may be encoded as one character or two characters. There may be more than one way to decode a string. For example. 11 can be decoded as AA or K. Given a string containing digits only, Find out how many ways it can be decoded. Please note the string may contain leading 0's , which is not legal, and illegal string should return 0 ways.
+Given a rows x cols binary matrix filled with 0's and 1's, find the largest rectangle containing only 1's and return its area.
 
-#### BF
+#### Solution
 
-It is hard to think the string as a whole. But for each stage, it is clear. One can check if a character is legal and if combine this character and the following character is a valid decode. A recursive function sounds like a good choice. 
+To find a rectangle, we need to find the width and height. the navie way would require fix a corner (e.g. bottom right corner) and find all rectangle and find the one with max area. However, this requires check all elements in the submatrix (0,0) - > current corner. 
+
+To avoid repeatly calculate we can fix one dimension the width. For each row, we can calcualte the presum array. And when we check the height, the width would be the minimum with across the rows that the height includes. Of course, the large the height may not leads to large rectangle because the width might shrink. So we need to track the max area along the way. In this case, we only need to check the previous presum arrays as height changes instead of traversing all the entries in the submatrix.
 
 ```java
-    public int numDecodings(String s) {
-        if(s == null || s.isEmpty()){
+    public int maximalRectangle(char[][] matrix) {
+        int res = 0;
+        final int M = matrix.length;
+        if (M == 0 ) {
             return 0;
         }
-        char[] chars = s.toCharArray();
-        return numDecodings(chars,0);
-    }
-    private int numDecodings(char[] chars, int idx) {
-        if(chars.length == idx) {
-            return 1;
+        final int N = matrix[0].length;
+        if (N == 0) {
+            return 0;
         }
-        int cnt = 0;
-        if (chars[idx] != '0'){
-             cnt += numDecodings(chars, idx + 1);
-        }
-        //10 ~ 26
-        if(idx < chars.length - 1 && (chars[idx] == '1' || ( chars[idx] == '2' && chars[idx+1] < '7'))){
-            cnt += numDecodings(chars,idx+2);
-        }
-        return cnt;
-    } 
-```
-
-
-
-#### DP
-
-With the above BF solution, it can be translated into dp with memorization and tabulation. This is clearly a suffix dp.
-
-```
-dp[i] = (chars[i] != '0' ? dp[i + 1] : 0) + (chars[i:i+1] is 10 ~ 26 ? dp[i+2] : 0);
-```
-
-```java
-    public int numDecodings(String s) {
-        char[] chars = s.toCharArray();
-        if (chars[0] == '0') { return 0; }        
-        int[] dp = new int[chars.length + 1];
-        //base case: empty string is only one way.
-        dp[chars.length] = 1;
-        int suf = -1;
-        for (int i = chars.length - 1; i >= 0 ; --i) {
-            int cur = chars[i] - '0';
-            if (cur != 0) {
-                dp[i] = dp[i + 1];
-            }
-            // if not last character and this character and the next character is from 10 ~ 26.
-            if (suf >= 0 && (cur == 1 || (cur == 2 && suf < 7))) {
-                dp[i] += dp[i + 2];
-            }
-            suf = cur;
-        }
-        
-        return dp[0];
-    }
-```
-
-Time complexity:  one loop O(n)
-
-Space complexity: the array O(n);
-
-Reduce the space complexity to constant space because only dp[i - 1] and dp[i - 2] is used in each iteration.
-
-```java
-    public int numDecodings(String s) {
-        char[] chars = s.toCharArray();
-        if (chars[0] == '0') { return 0; }        
-        int[] dp = new int[chars.length + 1];
-        int nextDW = 1;
-        int next2DW = -1;
-        int suf = -1;
-        for (int i = chars.length - 1; i >= 0 ; --i) {
-            int cur = chars[i] - '0';
-            int temp = 0;
-            if (cur != 0) {
-                temp = nextDW;
-            }
-            if (suf >= 0 && (cur == 1 || (cur == 2 && suf < 7))) {
-                temp += next2DW;
-            }
-            suf = cur;
-            next2DW = nextDW;
-            nextDW = temp;
-        }
-        
-        return nextDW;
-    }
-```
-
-Space complexity:  constant space O(1)
-
-If write in prefix way. it is a little more complicated than the suffix way.
-
-```java
-    public int numDecodings(String s) {
-        if( s == null || s.isEmpty() ){
-            return 1;
-        }
-        char[] chars = s.toCharArray();
-        if (chars[0] == '0') { return 0; }        
-        int[] dp = new int[s.length() + 1];
-        dp[0] = 1;
-        int prev = -1;
-        for (int i = 0; i < chars.length; ++i) {
-            int cur = chars[i] - '0';
-            if (cur == 0) {
-                // check if 10 or 20
-                if (prev > 0 && prev < 3 && i > 0) {
-                    dp[i + 1] = dp[i - 1];
-                } else {
-                    return 0;
+        int[][] dp = new int[M][N];
+        for (int i = 0; i < M; ++i) {
+            dp[i][0] = matrix[i][0] - '0';
+            for (int j = 1; j < N; ++j) {
+                if (matrix[i][j] == '1') {
+                    dp[i][j] = 1 + dp[i][j-1];
                 }
-            } else if (prev == 1 || (prev == 2 && cur < 7)) {
-                //11 ~ 19 21 ~ 26
-                dp[i + 1] = dp[i] + (i > 0 ? dp [i -1] : 0 );
-            } else {
-                dp[i + 1] = dp[i];
             }
-            prev = cur;
         }
         
-        return dp[dp.length - 1];
+        for (int i = 0; i < M; ++i) {
+            for (int j = 0; j < N; ++j) {
+                if (dp[i][j] == 0) {
+                    continue;
+                }
+                int len = dp[i][j];
+                for (int k = i; k < M; ++k) {
+                    if (dp[k][j] == 0) {
+                        break;
+                    }
+                    if (dp[k][j] < len) {
+                        len = dp[k][j];
+                    }
+                    res = Math.max(res, (k - i + 1) * len);
+                    
+                }
+            }
+        }
+        return res;
     }
 ```
-
+Time complexiy: presum matrix O(mn), get max rectangle O(mn * n) => O(n<sup>2</sup>m) when m < n, the column presum can be considered instead.
+Space complexity: O(mn)
