--- a/Stack_Queue_PriorityQueue_Deque/04.Meeting_Rooms_II.md
+++ b/Stack_Queue_PriorityQueue_Deque/04.Meeting_Rooms_II.md
@@ -9,6 +9,7 @@ Given an array of meeting time intervals *intervals* where *intervals[i] = [star
 The minimum number of conference room is equal to the max number of meetings that overlapped from the mini start time and the max end time.
 The question become finding the that number. When a meeting overlap with another meeting? That is that end time of meeting A is between the start time of meeting B and the end time of meeting B. Also, it should strictly greater than the start time of meeting B, and it can be equal to the end time of meeting B.
 So, we need to check both the start time and end time. In this case we can sort the array by start time and use PriorityQueue to process the end time after sorting.
+When we want to add a new meeting, we can check if there is a room available. If yes, the last meeting in this room is removed from the queue and we add the meeting to the queue to ocuppied this meeting room. Otherwise, the meeting is directly adding to the queue to create a new room. At the end, the number of meeting left in the queue is the minimum number of rooms.
 
 ```java
  public int minMeetingRooms(int[][] intervals) {
@@ -16,19 +17,83 @@ So, we need to check both the start time and end time. In this case we can sort 
         return 0;
     }
     Arrays.sort(intervals, (a, b) -> a[0] - b[0]);
-    PriorityQueue<int[]> pq = new PriorityQueue<>();
+    PriorityQueue<int[]> pq = new PriorityQueue<>(8, (a,b) -> a[1] - b[1]);
+    //added the first room
     pq.add(intervals[0]);
     int res = 0;
     for (int i = 1; i < intervals.length; ++i) {
         int[] interval = intervals[i];
-        if (pq.peek()[0] <= interval[0]) {
-            res = Math.max(res, pq.size());
-            pq.clear()
-        } else {
-            pq.add(interval);
+        // check if any meeting room is available
+        if (pq.peek()[1] <= interval[0]) {
+            // evict that room
+            pq.poll();
         }
+        pq.add(interval);
+        
     }
-    return Math.max(res, pq.size());
+    return pq.size();
  }
 ```
+Time complexity: sort -> O(nlogn) pq -> O(nlogn) => O(nlogn)
 
+Space complexity: the max size of pq => O(n)
+
+### Tracking events
+For each meeting, we have two events meeting started and meeing ended. When meeting starts, we need a new room, For meeting ends, we do not need that room. In this case, we can assign the starting of meeting event with 1 and ending of meeting events with -1. We can sort by the time of those events and make sure ending events is prior to starting events at the same timestamp. That is because the the new meeting can use the room the previous meeting just ends. The max sum during the iteration is the result.
+
+```java
+ public int minMeetingRooms(int[][] intervals) {
+    if (intervals == null || intervals.length == 0) {
+        return 0;
+    }
+    int[][] events = new int[intervals.length*2][2];
+    for (int i = 0; i < intervals.length; ++i) {
+        int idx = 2 * i;
+        events[idx][0] = intervals[i][0];
+        events[idx][1] = 1;
+        events[idx+1][0] = intervals[i][1];
+        events[idx+1][1] = -1;
+    }
+    Arrays.sort(events, (a,b) -> a[0] == b[0] ? a[1] - b[1] : a[0] - b[0]);
+    int res = 0;
+    int cur = 0;
+    for (int[] event : events) {
+        cur += event[1];
+        res = Math.max(cur, res);
+    }
+    return res;
+ }
+```
+Time complexity: create events array -> O(n) sort -> O(nlogn) => O(nlogn)
+
+Space complexity: events array => O(n)
+
+Sorting events would be 2nlog(2n) as we double the array. To improve this we can have separate array for starts and ends. Then it would be nlogn + nlogn = 2nlogn;
+
+
+```java
+ public int minMeetingRooms(int[][] intervals) {
+    if (intervals == null || intervals.length == 0) {
+        return 0;
+    }
+    int[] starts = new int[intervals.length];
+    int[] ends = new int[intervals.length];
+    for (int i = 0; i < intervals.length; ++i) {
+        starts[i] = intervals[i][0];
+        ends[i] = intervals[i][1];
+    }
+    Arrays.sort(starts);
+    Arrays.sort(ends);
+    int cur = 0;
+    int idEnd = 0;
+    for (int start : starts) {
+        // see the logic in Sort + PQ. find an available room 
+        if (start >= ends[idEnd]) {
+            idEnd++;
+            cur--;
+        }
+        cur++;
+    }
+    return cur;
+ }
+```
