--- a/Stack_Queue_PriorityQueue_Deque/05.Trapping_Rain_Water_II.md
+++ b/Stack_Queue_PriorityQueue_Deque/05.Trapping_Rain_Water_II.md
@@ -8,7 +8,7 @@ Given an m x n integer matrix heightMap representing the height of each unit cel
 
 #### PQ + BFS
 
-When the water flows instead of the matrix. It must heigher than the lowest boundary cells. As the height of water grows, it can reach more cells. When the height of the cells is less than the height of water. The water is trapped. So we need to search from the boundary. The first cell allows water to be flown in must be the one with lowest height in the  boundary. From that time, all the cells adjcent to that lowest boundary cell become boundaries if they not already be one. And water flows to the lowest cells with previous boundaries and newly added boundaries because of flows to the lowest boundary point. Repeat this process would find the order of cells being flowed by water. When the cells height is less than current water  height. The water is trapped.
+When the water flows instead of the matrix. It must heigher than the lowest boundary cells. As the height of water grows, it can reach more cells. When the height of the cells is less than the height of water. The water is trapped. So we need to search from the boundary. The first cell allows water to be flown in must be the one with lowest height in the boundary. From that time, all the cells adjcent to that lowest boundary cell become boundaries if they are not already one. Water flows to the lowest cells with previous boundaries and newly added boundaries. The water level should be at least the height of the lowest cell so that water can flows there. If the lowest height is greater than the current water level. The water level should be increased to that level. the water trapped is equal to the difference in heights between current water level and the height of a cell. Repeat this process would find the order of cells being flowed by water. When the cells height is less than current water  height. The water is trapped.
 
 So we need the Priority Queue to track the height of lowest boundary and BFS to find new boundaries after the lowest boundary being covered by water.
 
