--- a/Union_Find/02.Number_of_Islands.md
+++ b/Union_Find/02.Number_of_Islands.md
@@ -1,12 +1,14 @@
 ## Number of Islands
 
+### Number of Islands
+
 [Link](https://leetcode.com/problems/number-of-islands/)
 
 Given an `m x n` 2D binary grid `grid` which represents a map of `'1'`s (land) and `'0'`s (water), return *the number of islands*.
 
 An **island** is surrounded by water and is formed by connecting adjacent lands horizontally or vertically. You may assume all four edges of the grid are all surrounded by water.
 
-### Solution
+#### Solution
 
 This question would group adjacent '1's horizontally and vertically as one group or join and merge an existing groups of those 1's into one group. We can use Union Find here. Similar to the "Number of Provinces", every time two groups joins we would decrease the number of groups by 1. The difference here is that we would only count 1's as individual group in the beginning. Of course, one can join all 1's first and count those x == find(x) in another iteration to get the answer.  But if you want to count one iteration, we can just return 0 and 1 from the union function to tell if two groups are join. And minus it from number of groups along the road. Although at a given point, this might be negative but after the whole process, this would be the correct answer.
 
@@ -85,3 +87,99 @@ Space complexity parent array and rank array O(m*n)
 
 Another solution is DFS. This has been described in the [DFS section](..\DFS_BFS\04.Number_of_Islands__Minesweeper.md).
 
+### Number of Islands II
+
+[Link](https://leetcode.com/problems/number-of-islands-ii/)
+
+You are given an empty 2D binary grid grid of size m x n. The grid represents a map where 0's represent water and 1's represent land. Initially, all the cells of grid are water cells (i.e., all the cells are 0's).
+
+We may perform an add land operation which turns the water at position into a land. You are given an array positions where positions[i] = [r<sub>i</sub>, c<sub>i</sub>] is the position (r<sub>i</sub>, c<sub>i</sub>) at which we should operate the ith operation.
+
+Return an array of integers answer where answer[i] is the number of islands after turning the cell (r<sub>i</sub>, c<sub>i</sub>) into a land.
+
+An **island** is surrounded by water and is formed by connecting adjacent lands horizontally or vertically. You may assume all four edges of the grid are all surrounded by water.
+
+#### Solution
+
+This question can also be answered by UnionFind and DFS. For a new land, we can increase the number of islands but it might combine several existing islands. In that case, we can iterate over its surroundings and union with all adjacent island. If any two islands merged, the number of island we tracked would be reduced by 1 That is also why we need to assign the initiate one first regardless of whether it would be combined with any exisiting islands. 
+
+DFS would also works but once any two island merged the whole DFS path should be updated.
+
+```java
+    private static final int[][] DIRS = {{1,0},{-1,0},{0,1},{0,-1}};
+    public List<Integer> numIslands2(int m, int n, int[][] positions) {
+        UnionFind uf = new UnionFind(m*n);
+        boolean[][] isLands = new boolean[m][n];
+        List<Integer> res = new ArrayList<>(positions.length);
+        for (int i = 0; i < positions.length; ++i) {
+            int[] pos = positions[i];
+            if (isLands[pos[0]][pos[1]]) {
+                res.add(uf.getNum());
+                continue;
+            }
+            uf.increase();
+            isLands[pos[0]][pos[1]] = true;
+            int id = pos[0] * n + pos[1];
+            for (int[] dir : DIRS) {
+                int x = pos[0] + dir[0];
+                int y = pos[1] + dir[1];
+                if (x < 0 || x >= m || y < 0 || y >= n || !isLands[x][y]) {
+                    continue;
+                }
+                uf.union(id, x * n + y);
+            }
+            res.add(uf.getNum());
+        }
+        return res;
+        
+    }
+    private static class UnionFind {
+        private int[] parents;
+        private int islands;
+        
+        public UnionFind(int n) {
+            parents = new int[n];
+            for (int i = 1; i < n; ++i) {
+                parents[i] = i;
+            }
+        }
+        
+        public int find(int x) {
+            if (x != parents[x]) {
+                parents[x] = find(parents[x]);
+            }
+            return parents[x];
+        }
+        
+        public void increase() {
+            islands++;
+        }
+        
+        public int getNum() {
+            return islands;
+        }
+        
+        public void union(int x, int y) {
+            int pX = find(x);
+            int pY = find(y);
+            if (pX == pY) {
+                return;
+            }
+            islands--;
+            if (pX < pY) {
+                parents[pY] = pX;
+            } else {
+                parents[pX] = pY;
+            }
+            
+        }
+    }
+```
+
+Time Complexity: almost O(mn) (UnionFind operations is alpha(n) which is almost constant)
+Space Complexity: boolean array and unionFind => O(mn)
+
+Note:
+How about the question is asking the number of islands after turning the cell from islands to waters (The initial state would be some islands)? That can be think in backward. First let's remove all islands specified by the positions array. Then we add the islands backwards. It would be the same problem as adding the islands.
+
+But if the positions is not given in the form of an array but they are passed one by one in API call. UnionFind does not work. We need to go back the DFS. Each DFS path can have a set of cells belongs to its current islands and that set is also for tracking if a cell is visited twice. Mergining two islands would require a new DFS process to establish the set. Remove a island would require DFS on 4 adjacent islands and set up new set for each.
