--- a/Array_LinkedList_SkipList/01.Array.md
+++ b/Array_LinkedList_SkipList/01.Array.md
@@ -119,6 +119,31 @@ Time complexity: O(sqrt(n)) (Finding sqrt(n) would be log(n), assuming binary se
 
 Space complexity: O(1)
 
+##### Subarray Sum Equals K
+
+Given an array of integers nums and an integer k, return the total number of continuous subarrays whose sum equals to k.
+
+Analysis
+
+The brute force way would O(n<sup>2</sup>) by iterating all possible start and all possible ends. Clearly, there is a lot of repeated work. A common technique would be introducing a presum array where presum[i] is sum of all previous i - 1 elements and presum[0] = 0. In this case, the continuous subarrays sum would be a difference between two entries in the presum array. we are looking for all i and j such that presum[j] - presum[i] == k for all j > i. Although this is still O(n<sup>2</sup>), with the idea of two sum, we can simplify this by O(n). The idea is still using Map to record occurance of something to reduce it from O(n<sup>2</sup>) to O(n). This time we would work on the presum array instead of the original array.
+
+```java
+    public int subarraySum(int[] nums, int k) {
+        Map<Integer, Integer> map = new HashMap<>();
+        map.put(0,1);
+        int res = 0;
+        int sum = 0;
+        for (int num : nums) {
+            sum += num;
+            res += map.getOrDefault(sum - k, 0);
+            map.merge(sum, 1, (v1, v2) -> v1 + v2);
+        }
+        return res;
+    }
+```
+Time complexity: O(n)
+
+Space complexity: O(n)
 ### Container With Most Water
 
 [Link](https://leetcode.com/problems/container-with-most-water/)
