update image link

--- a/Search_Technique/Bidirectional_Search/00.Introduction.md
+++ b/Search_Technique/Bidirectional_Search/00.Introduction.md
@@ -4,7 +4,7 @@ Bidirectional search is a graph search algorithm that finds a shortest path from
 
 Bidirectional search can be applied to one-to-one shortest path algorithms such as BFS, Dijkstra and A*. The following is an illustration on Bidirectional BFS.
 
-![bidirectional_BFS](image\bidirectional_bfs.png)
+![bidirectional_BFS](image/bidirectional_bfs.png)
 
 The back nodes are searched from initial state and the blue nodes are searched from the goal. The grey nodes are nodes explored in the single direction BFS but avoided in the bidirectional BFS.
 
